fix aside responsive size and align footer's article-title left

--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,6 @@ a {
     color: black;
 }
 
-em, strong {
-    font-style: normal;
-    font-weight: normal;
-}
-
 table, th, td {
     padding: 0.5em;
     border: 0.2em solid var(--color-primary);
@@ -131,11 +126,12 @@ h4 {
     font-weight: bold;
 }
 
-p, a, span, label, em, td, th, ul, legend, caption, abbr {
+p, a, span, label, em, td, th, ul, legend, caption, abbr, strong {
     font-family: "DINNextW1G";
     font-weight: normal;
     font-style: normal;
     text-decoration: none;
+    font-size: 1em;
 }
 
 p {
@@ -150,6 +146,10 @@ footer th {
 
 footer table, footer th, footer td {
     border: 0;
+}
+
+footer .article-title {
+    text-align: left;
 }
 
 img {
@@ -825,20 +825,28 @@ header #checkNav:checked ~ul .icon {
 
     aside {
         margin-top: 0;
-        width: auto;
-        max-width: 20%;
+        width: 35%;
+        min-width: 15em;
+        max-width: 20em;
     }
 
     aside a {
         flex-wrap: wrap;
         flex-direction: column;
+        max-width: 15em;
     }
 
     aside h2 {
         margin-bottom: 0.5em;
     }    
 
+    aside nav {
+        display: flex;
+        justify-content: center;
+    }
+
     aside .icon {
+        margin-right: 0;
         margin-bottom: 1em;
     }
 
